biocomplexity/templates/postgrest-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgrest-test-deployment
  namespace: biocomplexity
  labels:
    app: postgrest-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgrest-test
  template:
    metadata:
      labels:
        app: postgrest-test
    spec:
#      volumes:
#      - name: postgrest-test-nfs-volume
#        persistentVolumeClaim:
#          claimName: postgrest-test-nfs-pvc # name of pvc
      containers:
      - name: postgrest-test-container
        image: postgrest/postgrest
        ports:
        - containerPort: 3000
#        volumeMounts:
#        - name: postgrest-test-nfs-volume
#          mountPath: /etc/postgrest.conf # mount inside of container
#        envFrom:
#          - configMapRef:
#              name: postgrest-config-map
        resources:
          requests:
            memory: "2024Mi"
            cpu: "50m"
          limits:
            memory: "3024Mi"
            cpu: "100m"
