biocomplexity/templates/postgrest-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgrest-test-service
  namespace: biocomplexity
spec:
  selector:
    app: postgrest-test
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
