biocomplexity/templates/postgrest-test/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: postgrest-test-nginx-ingress
  namespace: biocomplexity
spec:
  rules:
  - host: postgrest-test.pods.uvarc.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: postgrest-test-service
            port:
              number: 8080
